add property and dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+#DataBase
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.open-in-view=false
 
+#JWT
+jwt.header=Authorization
+jwt.secret=search
+jwt.expiration=604800
+
+#roles
+role.user=ROLE_USER
+role.admin=ROLE_ADMIN
