add properties; change method getEmail in JwtTokenProvider; change method doFilter in JwtTokenFilter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.jpa.open-in-view=true
 
 #JWT
 jwt.header=Authorization
-jwt.secret=search
+jwt.secret=Wimix
+jwt.prefix=Bearer
 jwt.expiration=604800
 
 #roles
